# autotrade-data

./: .gitignore  CLAUDE.md  Dockerfile  README.md  pyproject.toml
.claude/: settings.json  settings.local.json
.claude/rules/: pipeline.md  testing.md
.claude/skills/lint-fix/: SKILL.md
.claude/skills/run-tests/: SKILL.md
configs/: default.yaml
gateway/: README.md  crontab  daily_fetch.bat  daily_fetch.py  docker-compose.yml  gateway_manager.ps1  gateway_manager.py  ibc_config.ini  setup_ibc_task.ps1  setup_scheduled_task.ps1  setup_streaming_task.ps1  setup_twitter_task.ps1  start_gateway.bat  streaming_service.bat  streaming_service.py  trading_service.py  twitter_service.bat  twitter_service.py
marketdata/: __init__.py  __main__.py  cli.py  config.py
marketdata/db/: duck.py
marketdata/ibkr/: client.py  contracts.py  pacing.py
marketdata/pipeline/: breadth.py  chunking.py  events.py  fetch_bars.py  news.py  quality.py  storage.py
marketdata/streaming/: __init__.py  aggregator.py  collector.py  news_collector.py  scheduler.py  service.py
marketdata/trading/: __init__.py  service.py
marketdata/twitter/: __init__.py  collector.py
marketdata/utils/: log.py  time.py
scripts/: extract_twitter_cookies.py
tests/: conftest.py  test_aggregator.py  test_chunking.py  test_collector.py  test_news_collector.py  test_quality.py  test_scheduler.py  test_storage.py  test_tweet_collector.py
tools/strategies/: transcribe.py
